--- a/lab5 menu/Lab5 menu.ioc
+++ b/lab5 menu/Lab5 menu.ioc
@@ -2,15 +2,39 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
+Dma.Request0=USART2_TX
+Dma.Request1=USART2_RX
+Dma.RequestsNb=2
+Dma.USART2_RX.1.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART2_RX.1.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART2_RX.1.Instance=DMA1_Stream5
+Dma.USART2_RX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART2_RX.1.MemInc=DMA_MINC_ENABLE
+Dma.USART2_RX.1.Mode=DMA_CIRCULAR
+Dma.USART2_RX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART2_RX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.USART2_RX.1.Priority=DMA_PRIORITY_LOW
+Dma.USART2_RX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART2_TX.0.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART2_TX.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART2_TX.0.Instance=DMA1_Stream6
+Dma.USART2_TX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART2_TX.0.MemInc=DMA_MINC_ENABLE
+Dma.USART2_TX.0.Mode=DMA_NORMAL
+Dma.USART2_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART2_TX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.USART2_TX.0.Priority=DMA_PRIORITY_LOW
+Dma.USART2_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 File.Version=6
 KeepUserPlacement=false
 Mcu.CPN=STM32F411RET6
 Mcu.Family=STM32F4
-Mcu.IP0=NVIC
-Mcu.IP1=RCC
-Mcu.IP2=SYS
-Mcu.IP3=USART2
-Mcu.IPNb=4
+Mcu.IP0=DMA
+Mcu.IP1=NVIC
+Mcu.IP2=RCC
+Mcu.IP3=SYS
+Mcu.IP4=USART2
+Mcu.IPNb=5
 Mcu.Name=STM32F411R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
@@ -32,6 +56,8 @@ Mcu.UserName=STM32F411RETx
 MxCube.Version=6.7.0
 MxDb.Version=DB.6.0.70
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+NVIC.DMA1_Stream5_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA1_Stream6_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
@@ -41,6 +67,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_0
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:false
+NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=TMS
@@ -70,9 +97,6 @@ PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SWO
 PB3.Locked=true
 PB3.Signal=SYS_JTDO-SWO
-PC13-ANTI_TAMP.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
-PC13-ANTI_TAMP.GPIO_Label=B1 [Blue PushButton]
-PC13-ANTI_TAMP.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PC13-ANTI_TAMP.Locked=true
 PC13-ANTI_TAMP.Signal=GPXTI13
 PC14-OSC32_IN.Locked=true
@@ -115,7 +139,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=84000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -150,7 +174,8 @@ RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=96000000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
-USART2.IPParameters=VirtualMode
+USART2.BaudRate=57600
+USART2.IPParameters=VirtualMode,BaudRate
 USART2.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
